<resources>
    <string name="app_name">Assignment1</string>
    <string name="message_prompt">How are you feeling today?</string>
    <string name="Fear_button">Fear</string>
    <string name="Joy_button">Joy</string>
    <string name="Love_button">Love</string>
    <string name="Surpise_button">Surprise</string>
    <string name="Anger_button">Anger</string>
    <string name="Sadness_button">Sadness</string>
    <string name="history_button">View History</string>
</resources>
